项目架构优化、代码编码规范